--- a/templates/SeniorLogin.html
+++ b/templates/SeniorLogin.html
@@ -41,6 +41,12 @@
         </div>
 
         <button type="submit" class="btn btn-primary w-100">Log In</button>
+
+          <!-- FORGOT PASSWORD -->
+        <p class="mt-3 text-center">
+            <a href="{{ url_for('forgot_password_page') }}">Forgot your password?</a>
+          </p>
+          
       </form>
 
       <div class="text-center mt-3">
