Add forgot password link to staff login.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -84,6 +84,12 @@
         </div>
 
         <button type="submit" class="btn btn-login w-100 btn-primary">Sign In</button>
+        
+        <!--FORGOT PASSWORD-->
+        <p class="text-center mt-3">
+          <a href="{{ url_for('forgot_password_page') }}">Forgot your password?</a>
+        </p>
+        
 
         <div class="login-options text-center mt-3">
           <a href="forgot-password.html" class="text-decoration-none me-3">Forgot password?</a>
